--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ stages:
     - meson build -Ddriver_libvirtd=disabled "--prefix=$VROOT" "--libdir=$LIBDIR"
     - ninja -C build install
     - popd
-    - ./autogen.sh
+    - ./autogen.sh ${CONFIGURE_ARGS}
     - make distcheck
   after_script:
     - find -name test-suite.log | xargs cat
@@ -39,7 +39,7 @@ stages:
 .native_build_job:
   script:
     - export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
-    - ./autogen.sh
+    - ./autogen.sh ${CONFIGURE_ARGS}
     - make distcheck
   after_script:
     - find -name test-suite.log | xargs cat
@@ -57,7 +57,7 @@ stages:
 .website:
   script:
     - mkdir /tmp/web
-    - ./autogen.sh --with-html-dir=/tmp/web
+    - ./autogen.sh --with-html-dir=/tmp/web ${CONFIGURE_ARGS}
     - make
     - make install
     - mv /tmp/web/libvirt-php*/html public
