configure: Allow users override php binary
Our test suite runs php binary. But users might not have the
default 'php' but rather 'php82' or something else. Teach our
configure script to accept --with-php=... argument and fix all
direct invocations of 'php'.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 /missing
 /tests/*.log
 /tests/*.trs
+/tests/check_parameters.sh
+/tests/runtests.sh
 /tests/functions.phpt
 /test-driver
 /AUTHORS
