--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 EXTRA_DIST = libvirt-php.spec libvirt-php.spec.in AUTHORS.in
 
-AM_DISTCHECK_CONFIGURE_FLAGS = --with-distcheck
+AM_DISTCHECK_CONFIGURE_FLAGS = --with-distcheck --with-php-config=$(PHPCONFIG)
 
 rpm: clean
 	@(unset CDPATH ; $(MAKE) dist && rpmbuild -ta $(distdir).tar.xz)
