--- a/docs/contact.html.in
+++ b/docs/contact.html.in
@@ -8,13 +8,12 @@
     <h2><a name="email">Mailing lists</a></h2>
 
     <p>
-      If you want to send patches or if you see for advice that's related to libvirt-php or libvirt you can use following mailing list:
+      If you are seeking an advice that's related to libvirt-php or libvirt you can use our mailing lists:
     </p>
-
     <dl>
-      <dt><a href="https://www.redhat.com/mailman/listinfo/libvir-list">libvir-list@redhat.com</a></dt>
+      <dt><a href="https://lists.libvirt.org">lists.libvirt.org</a></dt>
       <dd>
-        Archives at <a href="https://www.redhat.com/archives/libvir-list">https://www.redhat.com/archives/libvir-list</a>
+        Archives at <a href="https://lists.libvirt.org/archives/list/devel@lists.libvirt.org/">https://lists.libvirt.org/archives/list/devel@lists.libvirt.org/</a>
       </dd>
       <dd>
         This is a high volume mailing list.  It is a place for discussions
@@ -30,6 +29,16 @@
           <li>Testing and documentation of libvirt-php</li>
         </ul>
       </dd>
+    </dl>
 
+    <p>
+      For more way to contact developers see libvirt's <a href="https://libvirt.org/contact.html">contacts page</a>.
+    </p>
+
+    <p>
+      Please note, libvirt-php no longer accepts patches sent via mailing lists
+      as it uses <a href="https://gitlab.com/libvirt/libvirt-php/-/merge_requests">merge requests</a>.
+      It also uses gitlab's <a href="https://gitlab.com/libvirt/libvirt-php/-/issues">issue tracker</a>.
+    </p>
   </body>
 </html>
