runtests: Turn array of tests into an actual array
At the beginning of runtests.sh there's a list of tests to run.
Well, since it's not declared as a proper array shell is having
some difficulties understanding it. Declaring as a proper array
resumes running all tests, not just the first one. This
effectively reverts: ccef5ee840462e622aec61079300efc81c6d202d.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/tests/runtests.sh.in
+++ b/tests/runtests.sh.in
@@ -1,9 +1,9 @@
-#!/bin/sh
+#!/usr/bin/env bash
 
 : ${srcdir=.}
 
 nf=$1
-tests=\
+tests=(\
 "test-version-check" \
 "test-version-get" \
 "test-get-emulator" \
@@ -18,7 +18,8 @@ tests=\
 "test-install" \
 "test-get-models" \
 "test-get-models-unsupported-hw" \
-"test-domain-create-get-metadata"
+"test-domain-create-get-metadata" \
+)
 
 run_test()
 {
@@ -41,7 +42,7 @@ run_test()
 touch /tmp/test-libvirt-php.tmp
 
 error=0
-for atest in ${tests}
+for atest in ${tests[@]}
 do
 	run_test $atest $nf; ret="$?"
 
