gitlab-ci: Print contents of runtests.sh.log too
Any error reported by a test script is propagated into
runtests.sh.log (because automake's test-driver executes
runtests.sh). Print its content too, right after test-suite.log.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ stages:
     - make distcheck
   after_script:
     - find -name test-suite.log | xargs cat
+    - find -name runtests.sh.log | xargs cat
 
 .native_build_job:
   extends:
@@ -37,6 +38,7 @@ stages:
     - make distcheck
   after_script:
     - find -name test-suite.log | xargs cat
+    - find -name runtests.sh.log | xargs cat
 
 .website:
   script:
