ci: refresh with 'lcitool manifest'
Notable changes

 * Drop Alpine 3.18, add 3.20
 * Drop Fedora 38, add 40
 * Drop Ubuntu 20.04, add 24.04
 * Switch manifest to reference projects via URLs

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/ci/gitlab/builds.yml
+++ b/ci/gitlab/builds.yml
@@ -7,18 +7,6 @@
 
 # Native build jobs
 
-x86_64-alpine-318:
-  extends: .native_build_job
-  needs:
-    - job: x86_64-alpine-318-container
-      optional: true
-  allow_failure: false
-  variables:
-    CONFIGURE_ARGS: --with-php=/usr/bin/php82 --with-php-config=/usr/bin/php-config82
-    NAME: alpine-318
-    TARGET_BASE_IMAGE: docker.io/library/alpine:3.18
-
-
 x86_64-alpine-319:
   extends: .native_build_job
   needs:
@@ -31,6 +19,18 @@ x86_64-alpine-319:
     TARGET_BASE_IMAGE: docker.io/library/alpine:3.19
 
 
+x86_64-alpine-320:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-alpine-320-container
+      optional: true
+  allow_failure: false
+  variables:
+    CONFIGURE_ARGS: --with-php=/usr/bin/php83 --with-php-config=/usr/bin/php-config83
+    NAME: alpine-320
+    TARGET_BASE_IMAGE: docker.io/library/alpine:3.20
+
+
 x86_64-alpine-edge:
   extends: .native_build_job
   needs:
@@ -41,6 +41,17 @@ x86_64-alpine-edge:
     CONFIGURE_ARGS: --with-php=/usr/bin/php83 --with-php-config=/usr/bin/php-config83
     NAME: alpine-edge
     TARGET_BASE_IMAGE: docker.io/library/alpine:edge
+
+
+x86_64-debian-12:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-debian-12-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: debian-12
+    TARGET_BASE_IMAGE: docker.io/library/debian:12-slim
 
 
 x86_64-debian-12-git:
@@ -65,17 +76,6 @@ x86_64-debian-sid:
     TARGET_BASE_IMAGE: docker.io/library/debian:sid-slim
 
 
-x86_64-fedora-38:
-  extends: .native_build_job
-  needs:
-    - job: x86_64-fedora-38-container
-      optional: true
-  allow_failure: false
-  variables:
-    NAME: fedora-38
-    TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:38
-
-
 x86_64-fedora-39:
   extends: .native_build_job
   needs:
@@ -85,6 +85,17 @@ x86_64-fedora-39:
   variables:
     NAME: fedora-39
     TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:39
+
+
+x86_64-fedora-40:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-fedora-40-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: fedora-40
+    TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:40
 
 
 x86_64-fedora-rawhide:
@@ -106,7 +117,7 @@ x86_64-opensuse-leap-15:
   allow_failure: false
   variables:
     NAME: opensuse-leap-15
-    TARGET_BASE_IMAGE: registry.opensuse.org/opensuse/leap:15.5
+    TARGET_BASE_IMAGE: registry.opensuse.org/opensuse/leap:15.6
 
 
 x86_64-opensuse-tumbleweed:
@@ -120,17 +131,6 @@ x86_64-opensuse-tumbleweed:
     TARGET_BASE_IMAGE: registry.opensuse.org/opensuse/tumbleweed:latest
 
 
-x86_64-ubuntu-2004:
-  extends: .native_build_job
-  needs:
-    - job: x86_64-ubuntu-2004-container
-      optional: true
-  allow_failure: false
-  variables:
-    NAME: ubuntu-2004
-    TARGET_BASE_IMAGE: docker.io/library/ubuntu:20.04
-
-
 x86_64-ubuntu-2204:
   extends: .native_build_job
   needs:
@@ -140,3 +140,14 @@ x86_64-ubuntu-2204:
   variables:
     NAME: ubuntu-2204
     TARGET_BASE_IMAGE: docker.io/library/ubuntu:22.04
+
+
+x86_64-ubuntu-2404:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-ubuntu-2404-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: ubuntu-2404
+    TARGET_BASE_IMAGE: docker.io/library/ubuntu:24.04
